# greencare

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.org  go.mod  greencare.go
cmd/: BUILD.bazel  main.go
