module(
    name = "greencare",
    repo_name = "com_github_taylormonacelli_greencare",
    version = "1.0",
)

bazel_dep(name = "gazelle", version = "0.47.0", repo_name = "bazel_gazelle")
bazel_dep(name = "rules_go", version = "0.60.0", repo_name = "io_bazel_rules_go")

go_deps.from_file(go_mod = "//:go.mod")
